samples/_failures_safe/1761439522_da87b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2d3a787d.c: In function ‘tokenize’:
./samples/SAFE/__tmp_2d3a787d.c:175:23: error: expected ‘)’ at end of input
  175 |         if (token.type
      |            ~          ^
      |                       )
./samples/SAFE/__tmp_2d3a787d.c:175:9: error: expected declaration or statement at end of input
  175 |         if (token.type
      |         ^~
./samples/SAFE/__tmp_2d3a787d.c:175:9: error: expected declaration or statement at end of input
